fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ body {
 
 .jasmine-text {
   position: fixed;
-  bottom: -6.6vw;
+  bottom: -7.7vw;
   left: 0;
   font-size: 19vw;
   font-weight: 900;
@@ -32,7 +32,7 @@ body {
 }
 .sun-text {
   position: fixed;
-  bottom: -14.7vw;
+  bottom: -17.4vw;
   left: 0;
   font-size: 42vw;
   font-weight: 900;
